# SmartAI_Farm

./: .gitignore  DEPLOYMENT.md  README.md  app.py  list_articles.py  main.py  models.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  routes.py  run.py  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
SmartFarmAI/: app.py  routes.py
SmartFarmAI/instance/: agritech.db
SmartFarmAI/static/css/: style.css
SmartFarmAI/static/js/: crop_recommendation.js  knowledge_base.js  main.js  marketplace.js  weather.js
SmartFarmAI/templates/: profile.html
backend/: .env.example  .gitignore  app.py  config.py  models.py  render.yaml  requirements.txt  utils.py
backend/ml_models/: crop_recommendation.py  disease_identification.py  weather_prediction.py
frontend/: index.html  index5.html  package.json  vercel.json
frontend/pages/: weather.html
frontend/static/css/: animations.css  style.css
frontend/static/js/: dashboard.js
frontend/templates/: base.html  dashboard.html  login.html  offline.html  register.html
instance/: agritech.db
static/css/: animations.css  style.css
static/js/: crop_recommendation.js  disease_detection.js  offline.js  translations.js  weather.js
templates/: base.html  crop_recommendation.html  dashboard.html  disease_detection.html  index.html  knowledge_base.html  marketplace.html  profile.html  weather.html
