[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartfarm-ai"
version = "1.0.0"
description = "AI-Powered Farming Solutions Platform"
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.30.0",
    "requests==2.31.0",
    "pandas==2.1.0",
    "Pillow==10.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
